--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -284,7 +284,7 @@ BP_Hammer_Hollow_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter
 BP_Gate_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 BP_Gate_Solid_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 BP_Gate_Base_L_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,CameraComponent.PostProcess.Lens,BoxComponent.Collision.Collision,
-BP_Stage_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
+BP_Stage_Base_C=
 BoxComponent=BoxComponent.Collision.Collision,
 AudioVolume=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,
 BP_MusicPlayer_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
@@ -355,7 +355,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Model/Gate_Base
+ContentBrowserDrawer.SelectedPaths=/Game/Model/Wander
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -411,7 +411,7 @@ Object="\"Object\" "
 LocalizationTargetSet="\"Object\" "
 LocalizationTarget="\"Object\" "
 CapsuleComponent="\"Object\" "
-ShapeComponent="\"Object\" "
+ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
@@ -663,8 +663,6 @@ MaterialExpressionVectorParameter="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Actor/BP_Gate_Base.BP_Gate_Base
-OpenAssetsAtExit=/Game/Actor/BP_Gate_Base_L.BP_Gate_Base_L
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -2852,31 +2850,31 @@ MaterialExpressionConstant.MaterialExpressionConstant=True
 MaterialExpressionConstant.MaterialExpression=True
 MaterialExpressionVectorParameter.General=True
 MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
-MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.MaterialExpression=False
 MaterialExpressionVectorParameter.CustomPrimitiveData=True
 MaterialExpressionVectorParameter.ParameterCustomization=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Actor/BP_Gate_Base_L
-MRUItem1=/Game/Actor/BP_Gate_Base
-MRUItem2=/Game/Level/Map_Main
-MRUItem3=/Game/Level/Map_Main1
-MRUItem4=/Game/Actor/BP_Gate_Solid
-MRUItem5=/Game/Model/Gate_Solid/pan
-MRUItem6=/Game/Model/Gate_Solid/eyes
-MRUItem7=/Game/Model/Gate_Solid/teeth
-MRUItem8=/Game/Model/RoundTable_Cross/1600/Cross_1600
-MRUItem9=/Game/Actor/RoundTable/BP_RoundTable_Cross_M
-MRUItem10=/Game/Actor/RoundTable/BP_Wander_Base
-MRUItem11=/Game/Actor/BP_SavePoint
-MRUItem12=/Game/Model/Rover/Rover
-MRUItem13=/Game/Actor/BP_Rover_Base
-MRUItem14=/Game/Actor/BP_Hammer_Base
-MRUItem15=/Game/Model/Hammer/Hammer
-MRUItem16=/Game/Model/Hammer/eyes_white
-MRUItem17=/Game/Model/Hammer/pigEyes
-MRUItem18=/Game/Model/Hammer/pigHammer
-MRUItem19=/Game/Model/Hammer/PigNose
+MRUItem0=/Game/Model/Wander/xiaojiao
+MRUItem1=/Game/Actor/BP_Hammer_Base
+MRUItem2=/Game/Model/Hammer/pigFace
+MRUItem3=/Game/Actor/RoundTable/BP_RoundTable_Cross
+MRUItem4=/Game/Actor/RoundTable/BP_RoundTable_Cross_M
+MRUItem5=/Game/Actor/BP_SavePoint
+MRUItem6=/Game/Actor/BP_Stage_Base
+MRUItem7=/Game/Actor/BP_Gate_Base_L
+MRUItem8=/Game/Actor/BP_Gate_Base
+MRUItem9=/Game/Level/Map_Main
+MRUItem10=/Game/Level/Map_Main1
+MRUItem11=/Game/Actor/BP_Gate_Solid
+MRUItem12=/Game/Model/Gate_Solid/pan
+MRUItem13=/Game/Model/Gate_Solid/eyes
+MRUItem14=/Game/Model/Gate_Solid/teeth
+MRUItem15=/Game/Model/RoundTable_Cross/1600/Cross_1600
+MRUItem16=/Game/Actor/RoundTable/BP_Wander_Base
+MRUItem17=/Game/Model/Rover/Rover
+MRUItem18=/Game/Actor/BP_Rover_Base
+MRUItem19=/Game/Model/Hammer/Hammer
 
 [PlacementMode]
 RecentlyPlaced=/Game/Model/Seasaw/Small/Seesaw_Small_plate.Seesaw_Small_plate;
@@ -3082,6 +3080,8 @@ RecentlyPlaced=/Game/Actor/RoundTable/BP_WindMill_3way.BP_WindMill_3way;
 /Game/Model/Rover/Rover.Rover=1
 /Game/Model/Gate_Solid/eyes.eyes=1
 /Game/Model/Gate_Solid/pan.pan=1
+/Game/Model/Hammer/pigFace.pigFace=1
+/Game/Model/Wander/xiaojiao.xiaojiao=1
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -3165,7 +3165,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=30.000 Y=0.000
-WindowSize=X=1292.000 Y=798.000
+WindowSize=X=1298.000 Y=804.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
