adjust lighting and texture

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -177,7 +177,7 @@ K2Node_EnhancedInputAction=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonC
 CameraComponent=CameraComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,
 CapsuleComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 BP_Tide_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
-SceneComponent=
+SceneComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 K2Node_VariableGet=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 PropertyWrapper=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 K2Node_VariableSet=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
@@ -284,16 +284,17 @@ BP_Hammer_Hollow_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter
 BP_Gate_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 BP_Gate_Solid_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 BP_Gate_Base_L_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,CameraComponent.PostProcess.Lens,BoxComponent.Collision.Collision,
-BP_Stage_Base_C=
+BP_Stage_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 BoxComponent=BoxComponent.Collision.Collision,
 AudioVolume=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,
 BP_MusicPlayer_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 WBP_Start_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 PlayerController=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 StaticMesh=StaticMesh.ImportSettings.Mesh,
+SkyAtmosphere=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Model/Gate_Base
+ContentBrowserTab1.SelectedPaths=/Game/Model/Gate_Solid
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -355,7 +356,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Model/Wander
+ContentBrowserDrawer.SelectedPaths=/Engine/EngineSky/VolumetricClouds
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -407,7 +408,7 @@ LastLevel=/Game/Level/Map_Main
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
 LocalizationTargetSet="\"Object\" "
 LocalizationTarget="\"Object\" "
 CapsuleComponent="\"Object\" "
@@ -2853,28 +2854,40 @@ MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
 MaterialExpressionVectorParameter.MaterialExpression=False
 MaterialExpressionVectorParameter.CustomPrimitiveData=True
 MaterialExpressionVectorParameter.ParameterCustomization=True
+BP_Sky_Sphere_C.默认=True
+BP_Sky_Sphere_C.Tick=True
+BP_Sky_Sphere_C.重载设置=True
+BP_Sky_Sphere_C.Replication=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Collision=True
+BP_Sky_Sphere_C.Actor=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.HLOD=True
+BP_Sky_Sphere_C.Physics=True
+BP_Sky_Sphere_C.WorldPartition=True
+BP_Sky_Sphere_C.Events=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Model/Wander/xiaojiao
-MRUItem1=/Game/Actor/BP_Hammer_Base
-MRUItem2=/Game/Model/Hammer/pigFace
-MRUItem3=/Game/Actor/RoundTable/BP_RoundTable_Cross
-MRUItem4=/Game/Actor/RoundTable/BP_RoundTable_Cross_M
-MRUItem5=/Game/Actor/BP_SavePoint
-MRUItem6=/Game/Actor/BP_Stage_Base
-MRUItem7=/Game/Actor/BP_Gate_Base_L
-MRUItem8=/Game/Actor/BP_Gate_Base
-MRUItem9=/Game/Level/Map_Main
-MRUItem10=/Game/Level/Map_Main1
-MRUItem11=/Game/Actor/BP_Gate_Solid
-MRUItem12=/Game/Model/Gate_Solid/pan
-MRUItem13=/Game/Model/Gate_Solid/eyes
-MRUItem14=/Game/Model/Gate_Solid/teeth
-MRUItem15=/Game/Model/RoundTable_Cross/1600/Cross_1600
-MRUItem16=/Game/Actor/RoundTable/BP_Wander_Base
-MRUItem17=/Game/Model/Rover/Rover
-MRUItem18=/Game/Actor/BP_Rover_Base
-MRUItem19=/Game/Model/Hammer/Hammer
+MRUItem0=/Engine/EngineSky/BP_Sky_Sphere
+MRUItem1=/Engine/EngineSky/SM_SkySphere
+MRUItem2=/Engine/EngineSky/M_Sky_Panning_Clouds2
+MRUItem3=/Game/Model/FloatBase/floatBase
+MRUItem4=/Game/Actor/BP_Stage_Base
+MRUItem5=/Game/Actor/BP_Gate_Solid
+MRUItem6=/Game/Model/Wander/xiaojiao
+MRUItem7=/Game/Actor/BP_Hammer_Base
+MRUItem8=/Game/Model/Hammer/pigFace
+MRUItem9=/Game/Actor/RoundTable/BP_RoundTable_Cross
+MRUItem10=/Game/Actor/RoundTable/BP_RoundTable_Cross_M
+MRUItem11=/Game/Actor/BP_SavePoint
+MRUItem12=/Game/Actor/BP_Gate_Base_L
+MRUItem13=/Game/Actor/BP_Gate_Base
+MRUItem14=/Game/Level/Map_Main
+MRUItem15=/Game/Level/Map_Main1
+MRUItem16=/Game/Model/Gate_Solid/pan
+MRUItem17=/Game/Model/Gate_Solid/eyes
+MRUItem18=/Game/Model/Gate_Solid/teeth
+MRUItem19=/Game/Model/RoundTable_Cross/1600/Cross_1600
 
 [PlacementMode]
 RecentlyPlaced=/Game/Model/Seasaw/Small/Seesaw_Small_plate.Seesaw_Small_plate;
@@ -3082,6 +3095,10 @@ RecentlyPlaced=/Game/Actor/RoundTable/BP_WindMill_3way.BP_WindMill_3way;
 /Game/Model/Gate_Solid/pan.pan=1
 /Game/Model/Hammer/pigFace.pigFace=1
 /Game/Model/Wander/xiaojiao.xiaojiao=1
+/Game/Model/FloatBase/floatBase.floatBase=1
+/Engine/EngineSky/SM_SkySphere.SM_SkySphere=1
+/Engine/EngineSky/M_Sky_Panning_Clouds2.M_Sky_Panning_Clouds2=1
+/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere=1
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -3165,7 +3182,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=30.000 Y=0.000
-WindowSize=X=1298.000 Y=804.000
+WindowSize=X=1300.000 Y=806.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -4292,6 +4309,7 @@ DeleteComponentInUse_Warning=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [WidgetTemplatesExpanded]
 编辑器=False
@@ -4659,7 +4677,7 @@ LodDistance7=0.000000
 MinimumLodNumber=0
 LodNumber=0
 bImportAnimations=False
-bImportMaterials=False
+bImportMaterials=True
 bImportTextures=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
