Change player ABP

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -165,7 +165,7 @@ InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingCont
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
 BP_Player_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
-SkeletalMeshComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
+SkeletalMeshComponent=
 SpringArmComponent=SpringArmComponent.TransformCommon.Transform,
 CharacterMovementComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 Blueprint=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,
@@ -293,9 +293,10 @@ ABP_Sucrose_C=
 WBP_Win_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 Map_Main_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 MulticastInlineDelegatePropertyWrapper=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
+AnimGraphNode_BlendSpacePlayer=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Actor
+ContentBrowserTab1.SelectedPaths=/Game/Player
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -412,7 +413,7 @@ WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
 LocalizationTargetSet="\"Object\" "
 LocalizationTarget="\"Object\" "
-CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
@@ -668,10 +669,13 @@ AnimGraphNode_RandomPlayer="\"Object\" "
 AnimGraphNode_StateResult="\"Object\" "
 WBP_Win_C="\"Object\" "
 K2Node_InputKey="\"Object\" "
+AnimBlueprint="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Player/ABP_Player.ABP_Player
+OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -2927,19 +2931,25 @@ WBP_View_C.Localization=True
 WBP_View_C.Accessibility=True
 WBP_View_C.Clipping=True
 WBP_View_C.Navigation=True
+AnimBlueprint.ClassOptions=True
+AnimBlueprint.Imports=True
+AnimBlueprint.Optimization=True
+AnimBlueprint.Interfaces=True
+AnimBlueprint.BlueprintOptions=True
+AnimBlueprint.Thumbnail=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Actor/BP_Star
-MRUItem1=/Game/Player/BP_Player
-MRUItem2=/Game/Widget/WBP_View
-MRUItem3=/Game/Widget/WBP_Win
-MRUItem4=/Game/Actor/BP_Static
-MRUItem5=/Game/Player/Sucrose/Animations/Sucrose_jumpfall
-MRUItem6=/Game/BattleWizardPolyart/Animations/JumpStartAnim
-MRUItem7=/Game/BattleWizardPolyart/Animations/JumpEndAnim
-MRUItem8=/Game/BattleWizardPolyart/Animations/Idle01Anim
-MRUItem9=/Game/Player/ABP_Sucrose
-MRUItem10=/Game/Player/ABP_Player
+MRUItem0=/Game/Player/BP_Player
+MRUItem1=/Game/Player/ABP_Player
+MRUItem2=/Game/Actor/BP_Star
+MRUItem3=/Game/Widget/WBP_View
+MRUItem4=/Game/Widget/WBP_Win
+MRUItem5=/Game/Actor/BP_Static
+MRUItem6=/Game/Player/Sucrose/Animations/Sucrose_jumpfall
+MRUItem7=/Game/BattleWizardPolyart/Animations/JumpStartAnim
+MRUItem8=/Game/BattleWizardPolyart/Animations/JumpEndAnim
+MRUItem9=/Game/BattleWizardPolyart/Animations/Idle01Anim
+MRUItem10=/Game/Player/ABP_Sucrose
 MRUItem11=/Game/Actor/BP_Seesaw_ObSwing
 MRUItem12=/Game/Actor/BP_Seesaw_Base
 MRUItem13=/Game/Actor/RoundTable/BP_Wander_Base_L
@@ -3170,7 +3180,7 @@ RecentlyPlaced=/Game/Actor/RoundTable/BP_WindMill_3way_L.BP_WindMill_3way_L;
 /Game/Widget/WBP_Win.WBP_Win=1
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=BlueprintLog
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3232,6 +3242,7 @@ CapsuleComponent.Shape=True
 AudioComponent.Sound=False
 FbxImportUI.Material=False
 StaticMesh.StaticMesh=False
+AnimBlueprint.ClassOptions=True
 
 [SelectionDetails]
 PreserveScaleRatio=True
@@ -3251,7 +3262,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=30.000 Y=0.000
-WindowSize=X=1302.000 Y=808.000
+WindowSize=X=1304.000 Y=810.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3268,7 +3279,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../Project/Project_Jump/Content/Level
+UNR=../../../../../../Users/16350/Documents/GitHub/Project_Jump/Content/Level
 BRUSH=../../../../../Project/Project_Jump/Project_Jump/Content/
 FBX=../../../../../Project/Project_Jump/Project_Jump/Content/
 FBXAnim=../../../../../Project/Project_Jump/Project_Jump/Content/
@@ -4301,8 +4312,8 @@ PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=E:/Unreal/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE/editor/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=E:/Unreal/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Programs Files/Unreal Engine/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
